Refactored Social media and user ones